# program-completion-check

./: README.md  pyproject.toml
doc/: data.md
doc/overview/: overview-slide.typ  watch.sh
src/: check.ipynb  check.py  credentials.json
src/make_dummy_data/: make_dummy_data.py  program_courses.xlsx  program_students.xlsx  utas_grade.xlsx  コース一覧.xlsx  登録学生一覧.xlsx  科目一覧.xlsx
src/program_completion_check/: __init__.py  main.py
