[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "program-completion-check"
version = "0.1.4"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "numpy",
    "gspread",
    "google-api-python-client",
    "google-auth",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

